--- a/DespidoTexto/src/DespidoFormulario/NewJFrame.form
+++ b/DespidoTexto/src/DespidoFormulario/NewJFrame.form
@@ -205,7 +205,7 @@
                           <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jComboBoxTipoDespido" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="26" max="32767" attributes="0"/>
@@ -218,7 +218,7 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel3" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jComboBoxTipoDespido" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -262,7 +262,8 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldFechaAlta">
           <Properties>
-            <Property name="text" type="java.lang.String" value="formato dd/mm/aaaa"/>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="text" type="java.lang.String" value="dd/mm/aaaa"/>
           </Properties>
           <Events>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTextFieldFechaAltaFocusGained"/>
@@ -272,7 +273,8 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldFechaBaja">
           <Properties>
-            <Property name="text" type="java.lang.String" value="formato dd/mm/aaaa"/>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="text" type="java.lang.String" value="dd/mm/aaaa"/>
           </Properties>
           <Events>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTextFieldFechaBajaFocusGained"/>
@@ -290,7 +292,7 @@
             <Property name="text" type="java.lang.String" value="Tipo de despido"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="jComboBoxTipoDespido">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
@@ -411,7 +413,7 @@
                       <Component id="jLabel12" min="-2" pref="120" max="-2" attributes="0"/>
                       <Component id="jTextField7" alignment="0" min="-2" pref="120" max="-2" attributes="0"/>
                       <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                          <Component id="jTextField4" alignment="1" min="-2" pref="120" max="-2" attributes="0"/>
+                          <Component id="jTextFieldDiasIndemnizacion" alignment="1" min="-2" pref="120" max="-2" attributes="0"/>
                           <Component id="jLabel9" alignment="1" min="-2" pref="120" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jTextFieldAntiguedadTotal" alignment="0" min="-2" pref="120" max="-2" attributes="0"/>
@@ -431,7 +433,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="jTextField4" min="-2" pref="25" max="-2" attributes="0"/>
+                  <Component id="jTextFieldDiasIndemnizacion" min="-2" pref="25" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -451,7 +453,7 @@
             <Property name="text" type="java.lang.String" value="Dias de Indemniz."/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField4">
+        <Component class="javax.swing.JTextField" name="jTextFieldDiasIndemnizacion">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="11" style="1"/>
