Añadido modulo de impresión.

--- a/DespidoTexto/src/DespidoFormulario/NewJFrame.form
+++ b/DespidoTexto/src/DespidoFormulario/NewJFrame.form
@@ -59,7 +59,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jButtonBorrar" max="32767" attributes="0"/>
-                                  <Component id="jButton1" max="32767" attributes="0"/>
+                                  <Component id="jButtonImprimir" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -81,7 +81,7 @@
                           <Group type="102" attributes="0">
                               <Component id="jButtonBorrar" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jButton1" max="-2" attributes="0"/>
+                              <Component id="jButtonImprimir" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jButtonCalcular" max="32767" attributes="0"/>
                       </Group>
@@ -347,12 +347,15 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="jButtonImprimir">
       <Properties>
         <Property name="text" type="java.lang.String" value="Imprimir"/>
         <Property name="enabled" type="boolean" value="false"/>
         <Property name="verticalAlignment" type="int" value="3"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonImprimirActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel6">
       <Properties>
